# midterm-spring-2019-rdawson210

./: CMakeLists.txt  README.md  travis.yml
01-basics/: basics.cpp  basics.h
01-basics_test/: basics_test.cpp
01_decisions/: CMakeLists.txt  dna_hamming.cpp  dna_hamming.h  main.cpp
01_decisions_test/: CMakeLists.txt  dna_hamming_test.cpp
02_iteration/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  main.cpp
02_iteration_test/: CMakeLists.txt  fibonacci_test.cpp
03_vectors/: CMakeLists.txt  dna_consensus.cpp  dna_consensus.h  main.cpp
03_vectors_test/: CMakeLists.txt  dna_consensus_test.cpp
04_class/: CMakeLists.txt  die.cpp  die.h  main.cpp
04_class_test/: CMakeLists.txt  die_test.cpp
05_class_composition/: CMakeLists.txt  main.cpp  roll.cpp  roll.h
05_class_composition_test/: CMakeLists.txt  roll_test.cpp
06_class_overloads/: CMakeLists.txt  main.cpp  roll_ol.cpp  roll_ol.h
06_class_overloads_test/: CMakeLists.txt  roll_ol_test.cpp
07_class_multiples/: CMakeLists.txt  main.cpp  shooter.cpp  shooter.h
07_class_multiples_test/: CMakeLists.txt  shooter_test.cpp
08_class_copy/: CMakeLists.txt  main.cpp
08_class_copy_test/: CMakeLists.txt  copy_test.cpp
09_class_friends/: CMakeLists.txt  main.cpp  roll_friend.cpp  roll_friend.h
09_class_friends_test/: CMakeLists.txt  roll_friend_test.cpp
10_class_operator/: CMakeLists.txt  craps.cpp  craps.h  main.cpp
10_class_operator_test/: CMakeLists.txt
