cmake_minimum_required(VERSION 3.8)

project("cosc-1337-midterm")

include_directories(inc)
include_directories(01_decisions)
include_directories(02_iteration)
include_directories(03_vectors)
include_directories(04_class)
include_directories(05_class_composition)
include_directories(06_class_overloads)
include_directories(07_class_multiples)
include_directories(08_class_copy)
include_directories(09_class_friends)
include_directories(10_class_operator)

add_subdirectory(01_decisions)
add_subdirectory(01_decisions_test)
add_subdirectory(02_iteration)
add_subdirectory(02_iteration_test)
add_subdirectory(03_vectors)
add_subdirectory(03_vectors_test)
add_subdirectory(04_class)
add_subdirectory(04_class_test)
add_subdirectory(05_class_composition)
add_subdirectory(05_class_composition_test)
add_subdirectory(06_class_overloads)
add_subdirectory(06_class_overloads_test)
add_subdirectory(07_class_multiples)
add_subdirectory(07_class_multiples_test)
add_subdirectory(08_class_copy)
add_subdirectory(08_class_copy_test)
add_subdirectory(09_class_friends)
add_subdirectory(09_class_friends_test)
add_subdirectory(10_class_operator)
add_subdirectory(10_class_operator_test)